--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Agriotes</h1>
     <nav>
-      <a href="sessions/1">Session 1</a>
+      <a href="trombinoscope?idSession=1">Session 1</a>
     </nav>
   </body>
 </html>
